feat: SecurityManager和资源管理