@@ -3,13 +3,19 @@ package cc.geektip.geekojcodesandbox;
 import cc.geektip.geekojcodesandbox.model.ExecuteCodeRequest;
 import cc.geektip.geekojcodesandbox.model.ExecuteCodeResponse;
 import cc.geektip.geekojcodesandbox.model.ExecuteMessage;
+import cc.geektip.geekojcodesandbox.model.JudgeInfo;
 import cc.geektip.geekojcodesandbox.utils.ProcessUtils;
 import cn.hutool.core.io.FileUtil;
 import cn.hutool.core.io.resource.ResourceUtil;
+import cn.hutool.core.util.StrUtil;
+import cn.hutool.dfa.FoundWord;
+import cn.hutool.dfa.WordTree;
+import lombok.extern.slf4j.Slf4j;
 
 import java.io.File;
-import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
@@ -18,19 +24,36 @@ import java.util.UUID;
  * @author: Fish
  * @date: 2024/3/1
  */
+@Slf4j
 public class JavaNativeCodeSandbox implements CodeSandbox {
     private static final String GLOBAL_CODE_DIR_NAME = "tmpCode";
+
     private static final String GLOBAL_JAVA_CLASS_NAME = "Main.java";
+
+    private static final String SECURITY_MANAGER_PATH = "C:\\Users\\yutia\\IdeaProjects\\geekoj-code-sandbox\\src\\main\\java\\cc\\geektip\\geekojcodesandbox\\security";
+
+    private static final String SECURITY_MANAGER_CLASS_NAME = "MySecurityManager";
+
+    private static final long TIME_OUT = 10000L;
+
+    private static final List<String> blackList = Arrays.asList("File", "exec");
+
+    private static final WordTree WORD_TREE;
+
+    static {
+        WORD_TREE = new WordTree();
+        WORD_TREE.addWords(blackList);
+    }
 
     public static void main(String[] args) {
         JavaNativeCodeSandbox javaNativeCodeSandbox = new JavaNativeCodeSandbox();
         ExecuteCodeRequest executeCodeRequest = new ExecuteCodeRequest();
-        executeCodeRequest.setInputList(List.of("1 2", "2 3"));
-        String code = ResourceUtil.readStr("testCode/simpleComputeArgs/Main.java", StandardCharsets.UTF_8);
+        executeCodeRequest.setInputList(List.of("1 2"));
+        String code = ResourceUtil.readStr("testCode/unsafeCode/RunFileError.java", StandardCharsets.UTF_8);
         executeCodeRequest.setCode(code);
         executeCodeRequest.setLanguage("java");
         ExecuteCodeResponse executeCodeResponse = javaNativeCodeSandbox.executeCode(executeCodeRequest);
-        System.out.println(executeCodeResponse);
+        log.info(executeCodeResponse.toString());
     }
 
     @Override
@@ -38,6 +61,13 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
         List<String> inputList = executeCodeRequest.getInputList();
         String code = executeCodeRequest.getCode();
         String language = executeCodeRequest.getLanguage();
+
+        // 校验代码中是否包含黑名单关键字
+        final FoundWord foundWord = WORD_TREE.matchWord(code);
+        if (foundWord != null) {
+            log.error("代码中包含禁止词 " + foundWord.getWord());
+            return getErrorResponse(new RuntimeException("代码中包含禁止词: " + foundWord.getWord()));
+        }
 
         String userDir = System.getProperty("user.dir");
         String globalCodePathName = userDir + File.separator + GLOBAL_CODE_DIR_NAME;
@@ -56,22 +86,94 @@ public class JavaNativeCodeSandbox implements CodeSandbox {
         try {
             Process compileProcess = Runtime.getRuntime().exec(compileCommand);
             ExecuteMessage compileMessage = ProcessUtils.runProcessAndGetMessage(compileProcess, "编译");
-            System.out.println(compileMessage);
+            log.info(compileMessage.toString());
         } catch (Exception e) {
-            throw new RuntimeException(e);
+            return getErrorResponse(e);
         }
+
         // 3. 执行代码
+        List<ExecuteMessage> executeMessageList = new ArrayList<>();
         for (String inputArgs : inputList) {
-            String rumCmd = String.format("java -Dfile.encoding=UTF-8 -cp %s Main %s", userCodeParentPath, inputArgs);
+            String rumCmd = String.format("java -Xmx256m -Dfile.encoding=UTF-8 -cp %s;%s -Djava.security.manager=%s Main %s",  userCodeParentPath, SECURITY_MANAGER_PATH, SECURITY_MANAGER_CLASS_NAME, inputArgs);
             try {
                 Process runProcess = Runtime.getRuntime().exec(rumCmd);
+                // 超时控制
+                new Thread(() -> {
+                    try {
+                        Thread.sleep(TIME_OUT);
+                        if (runProcess.isAlive()) {
+                            log.info("达到最大运行时间 [" + TIME_OUT + "] ms，强制结束");
+                            runProcess.destroy();
+                        }
+                    } catch (InterruptedException e) {
+                        throw new RuntimeException(e);
+                    }
+                }).start();
                 ExecuteMessage executeMessage = ProcessUtils.runProcessAndGetMessage(runProcess, "运行");
-                System.out.println(executeMessage);
-            } catch (IOException e) {
-                throw new RuntimeException(e);
+                log.info(executeMessage.toString());
+            } catch (Exception e) {
+                return getErrorResponse(e);
             }
         }
-        // 执行代码
-        return null;
+
+
+        // 4. 收集整理输出结果
+        ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
+        List<String> outputList = new ArrayList<>();
+        // 取最大时间，判断是否超时
+        long maxTime = 0;
+        for (ExecuteMessage executeMessage : executeMessageList) {
+            String errorMessage = executeMessage.getErrorMessage();
+            if (StrUtil.isNotBlank(errorMessage)) {
+                executeCodeResponse.setMessage(errorMessage);
+                // 执行中存在错误
+                executeCodeResponse.setStatus(3);
+                break;
+            }
+            outputList.add(executeMessage.getMessage());
+            final Long time = executeMessage.getTime();
+            if (time != null) {
+                maxTime = Math.max(maxTime, time);
+            }
+        }
+        // 正常执行完成
+        if (outputList.size() == executeMessageList.size()) {
+            executeCodeResponse.setStatus(1);
+        }
+        executeCodeResponse.setOutputList(outputList);
+        JudgeInfo judgeInfo = new JudgeInfo();
+        judgeInfo.setTime(maxTime);
+//        judgeInfo.setMemory();
+
+        executeCodeResponse.setJudgeInfo(judgeInfo);
+
+
+        // 5.文件清理
+        if (userCodeFile.getParentFile() != null) {
+            boolean del = FileUtil.del(userCodeParentPath);
+            if (!del) {
+                log.error("删除失败");
+            } else {
+                log.info("删除成功");
+            }
+        }
+
+        return executeCodeResponse;
+    }
+
+    /**
+     * 获取错误响应
+     *
+     * @param e 异常
+     * @return
+     */
+    private ExecuteCodeResponse getErrorResponse(Exception e) {
+        ExecuteCodeResponse executeCodeResponse = new ExecuteCodeResponse();
+        executeCodeResponse.setOutputList(new ArrayList<>());
+        executeCodeResponse.setMessage(e.getMessage());
+        // 表示代码沙箱错误
+        executeCodeResponse.setStatus(2);
+        executeCodeResponse.setJudgeInfo(new JudgeInfo());
+        return executeCodeResponse;
     }
 }
